--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^1.52.0",
     "axios": "^1.3.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.10.0",
